--- a/styles.scss
+++ b/styles.scss
@@ -10,7 +10,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Fira+Code&display=swap');
 
-@import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fauna+One|Headland+One|IM+Fell+Great+Primer+SC|Prata|Vidaloka&display=swap');
 
 @font-face {
   font-family: "Copyleft";
@@ -24,25 +24,47 @@ body {
   font-family: 'Noto Serif JP', serif;
 
   .main-header {
-    @apply flex flex-row-reverse mx-auto .h-screen bg-no-repeat bg-left pt-5;
+    @apply flex flex-col;
 
-    background-image: url("/bolten-hero.jpeg");
+    @screen md {
+      @apply flex-row border-b-2 border-black border-dashed;
+    }
+
+    .hero-bg {
+      @apply h-screen w-screen bg-cover bg-no-repeat;
+
+      background-image: url("/bolten-hero.jpeg");
+      background-position: -175px, 0;
+
+      @screen md {
+        @apply h-screen w-1/2 bg-auto bg-left;
+      }
+    }
 
     article {
-      @apply w-3/4 mt-5 shadow-md rounded p-5 pt-1;
+      @apply shadow-md rounded p-5 pt-1;
 
       background-color: lighten($bg-section, 5%);
       height: fit-content;
 
       @screen md {
-        @apply mt-20 w-1/2;
+        @apply mt-20 w-1/2 mr-10;
       }
 
       h1 {
-        @apply text-4xl mb-10 text-left leading-tight font-black;
+        @apply text-5xl mb-10 text-left leading-tight ;
+
+        font-family: 'IM Fell Great Primer SC', serif;
 
         @screen md {
           @apply text-6xl;
+        }
+
+        span {
+          background-image: linear-gradient(#e53e3e, #e53e3e);
+          background-size: 100% 0.3em;
+          background-repeat: no-repeat;
+          background-position: 0px 88%; 
         }
       }
 
@@ -58,7 +80,7 @@ body {
         @apply text-right text-sm font-mono uppercase;
 
         span {
-          @apply bg-yellow-200 rounded p-2;
+          @apply bg-yellow-200 rounded p-2 shadow;
         }
       }
     }
@@ -93,7 +115,7 @@ body {
   }
 
   section {
-    @apply py-5 px-8 text-justify shadow-md border-b-2 border-black border-dashed;
+    @apply py-5 px-8 text-justify shadow-md border-b border-black border-dashed;
 
     @screen md {
       @apply px-20;
