--- a/styles.scss
+++ b/styles.scss
@@ -18,6 +18,15 @@
 }
 
 $bg-section: #eaeaea;
+$bg-red-600: #e53e3e;
+
+.published-when {
+  @apply text-right text-sm font-mono uppercase;
+
+  span {
+    @apply bg-yellow-200 border border-yellow-300 rounded p-2 shadow;
+  }
+}
 
 body {
   background-color: $bg-section;
@@ -61,7 +70,7 @@ body {
         }
 
         span {
-          background-image: linear-gradient(#e53e3e, #e53e3e);
+          background-image: linear-gradient($bg-red-600, $bg-red-600);
           background-size: 100% 0.3em;
           background-repeat: no-repeat;
           background-position: 0px 88%; 
@@ -73,14 +82,6 @@ body {
 
         @screen md {
           @apply text-2xl;
-        }
-      }
-
-      .published-when {
-        @apply text-right text-sm font-mono uppercase;
-
-        span {
-          @apply bg-yellow-200 rounded p-2 shadow;
         }
       }
     }
@@ -115,7 +116,7 @@ body {
   }
 
   section {
-    @apply py-5 px-8 text-justify shadow-md border-b border-black border-dashed;
+    @apply py-5 text-justify shadow-md border-b border-black border-dashed;
 
     @screen md {
       @apply px-20;
@@ -124,7 +125,9 @@ body {
     background-color: $bg-section;
 
     h2 {
-      @apply text-3xl font-black text-left mb-2;
+      @apply text-3xl text-left leading-tight mb-2;
+
+      font-family: "Prata", serif;
 
       @screen md {
         @apply text-5xl;
@@ -133,8 +136,27 @@ body {
   }
 
   .posts-container {
+    @apply flex flex-row overflow-hidden px-2;
+
     article {
-      @apply mb-5;
+      @apply mb-5 w-screen shadow-md border border-red-700;
+      @apply px-10 pb-10 pt-1 bg-red-600 text-white rounded;
+
+      &:nth-child(n+2) {
+        @apply hidden
+      }
+
+      @screen md {
+        @apply w-1/2 px-5 pb-5 pt-1;
+
+        &:first-child {
+          @apply mr-10;
+        }
+      }
+
+      .published-when {
+        @apply text-black mb-5;
+      }
     }
   }
 
@@ -152,36 +174,10 @@ body {
       p {
         hyphens: auto;
       }
-
-      .info {
-        @apply flex bg-gray-900 text-white border-double border-8 border-white mb-10 p-5;
-
-        .cc {
-          @apply text-lg tracking-widest align-middle;
-          font-family: 'Copyleft', serif;
-        }
-
-        li {
-          @apply mb-3 leading-tight;
-        }
-      }
-    }
-  }
-
-  .archive-container {
-    ul {
-      li {
-        @apply mt-2;
-        h3 {
-          span {
-            @apply font-mono text-xs bg-gray-300 px-1 rounded border border-gray-400;
-          }
-        }
-      }
     }
   }
 
   .about-container {
-    @apply bg-gray-900 text-gray-200 whitespace-pre-wrap;
+    @apply bg-gray-900 text-gray-200 px-5;
   }
 }
