Swipe posts in mobile. Work in progress. Initial work on navbar

--- a/styles.scss
+++ b/styles.scss
@@ -20,17 +20,17 @@
 $bg-section: #eaeaea;
 $bg-red-600: #e53e3e;
 
-.published-when {
-  @apply text-right text-sm font-mono uppercase;
-
-  span {
-    @apply bg-yellow-200 border border-yellow-300 rounded p-2 shadow;
-  }
-}
-
 body {
   background-color: $bg-section;
   font-family: 'Noto Serif JP', serif;
+
+  .published-when {
+    @apply text-right text-sm font-mono uppercase;
+
+    span {
+      @apply bg-yellow-200 border border-yellow-300 rounded p-2 shadow;
+    }
+  }
 
   .main-header {
     @apply flex flex-col;
@@ -87,28 +87,20 @@ body {
     }
   }
 
-  .navigation-container {
-    @apply sticky top-0 shadow-lg z-10;
+  .navigation {
+    @apply sticky top-0 shadow-lg z-10 h-20 text-xl bg-black p-5;
 
-    .navigation {
-      @apply text-sm bg-black px-6;
+    font-family: 'Fira Code', monospace;
 
-      font-family: 'Fira Code', monospace;
+    ul {
+      @apply flex flex-row;
 
-      @screen md {
-        @apply text-lg;
-      }
+      li {
+        button {
+          @apply p-2 text-gray-300 font-bold ml-4;
 
-      ul {
-        @apply flex flex-row content-center;
-
-        li {
-          button {
-            @apply p-2 text-gray-300 font-bold ml-4;
-
-            &:hover {
-              @apply bg-red-600 rounded shadow-md;
-            }
+          &:hover {
+            @apply bg-red-600 rounded shadow-md;
           }
         }
       }
@@ -139,11 +131,23 @@ body {
     @apply flex flex-row overflow-hidden px-2;
 
     article {
-      @apply mb-5 w-screen shadow-md border border-red-700;
+      @apply mb-5 shadow-md border border-red-700;
       @apply px-10 pb-10 pt-1 bg-red-600 text-white rounded;
 
-      &:nth-child(n+2) {
-        @apply hidden
+      flex: 0 0 100vw;
+
+      &[data-direction="left"] {
+        @apply hidden;
+      }
+
+      &[data-current="true"] {
+        @apply block;
+      }
+
+      &[data-direction="left"] {
+        &[data-current="true"] + article {
+          @apply block;
+        }
       }
 
       @screen md {
