--- a/styles.scss
+++ b/styles.scss
@@ -19,6 +19,8 @@
 
 $bg-section: #eaeaea;
 $bg-red-600: #e53e3e;
+$bg-red-000: #d33a2c;
+$bg-white: #fafafa;
 
 body {
   background-color: $bg-section;
@@ -35,18 +37,20 @@ body {
   .main-header {
     @apply flex flex-col;
 
+    background-color: $bg-white;
+
     @screen md {
       @apply flex-row border-b-2 border-black border-dashed;
     }
 
     .hero-bg {
-      @apply h-screen w-screen bg-cover bg-no-repeat;
+      @apply h-screen w-screen bg-cover bg-no-repeat -mt-16;
 
-      background-image: url("/bolten-hero.jpeg");
-      background-position: -175px, 0;
+      background-image: url("/bolten-hero.svg");
+      background-position: -90px, 0;
 
       @screen md {
-        @apply h-screen w-1/2 bg-auto bg-left;
+        @apply h-screen w-1/2 bg-left mt-0;
       }
     }
 
@@ -115,6 +119,20 @@ body {
     }
 
     background-color: $bg-section;
+  }
+
+  .posts-container {
+    @apply flex flex-row overflow-hidden px-2;
+
+    background-color: $bg-white;
+
+    @screen md {
+      @apply pt-24 bg-no-repeat;
+
+      background-image: url("/flag.svg");
+      background-position: 95% 45%;
+      flex-wrap: wrap;
+    }
 
     h2 {
       @apply text-3xl text-left leading-tight mb-2;
@@ -125,15 +143,12 @@ body {
         @apply text-5xl;
       }
     }
-  }
 
-  .posts-container {
-    @apply flex flex-row overflow-hidden px-2;
+    .post-card {
+      @apply mb-5 shadow-md;
+      @apply px-10 pb-10 pt-1 text-black rounded;
 
-    article {
-      @apply mb-5 shadow-md border border-red-700;
-      @apply px-10 pb-10 pt-1 bg-red-600 text-white rounded;
-
+      background-color: lighten($bg-section, 5%);
       flex: 0 0 100vw;
 
       &[data-direction="left"] {
@@ -151,15 +166,31 @@ body {
       }
 
       @screen md {
-        @apply w-1/2 px-5 pb-5 pt-1;
+        @apply w-1/2 px-5 pb-5 pt-1 mx-2;
 
-        &:first-child {
-          @apply mr-10;
-        }
+        flex: 0 0 32%;
       }
 
       .published-when {
         @apply text-black mb-5;
+      }
+    }
+
+    .post-container-clear {
+      flex: 0 0 100%;
+    }
+
+    .post-short-container {
+      @apply flex-col ml-2;
+
+      .post-short {
+        @apply py-2 px-5 mb-5;
+
+        border-bottom: 1px solid darken($bg-section, 30%);
+
+        h2 {
+          @apply text-xl;
+        }
       }
     }
   }
