--- a/styles.scss
+++ b/styles.scss
@@ -116,9 +116,17 @@ body {
   }
 
   .posts-container {
+    @apply bg-contain bg-no-repeat;
+
     background-color: $bg-white;
-    background-image: url("/flag.svg") no-repeat;
-    background-position: 95% 45%;
+    background-image: url("/flag.svg");
+    background-position: 95% 35%;
+
+    @screen md {
+      @apply bg-auto;
+
+      background-position: 95% 55%;
+    }
 
     .post-card-container {
       @apply flex flex-row overflow-hidden px-2;
@@ -177,14 +185,18 @@ body {
     }
 
     .post-short-container {
-      @apply flex-col ml-2;
+      @apply flex-col ml-2 mt-48;
 
       flex: 0 0 100%;
 
+      @screen md {
+        @apply mt-20;
+      }
       .post-short {
         @apply py-2 px-5 mb-5;
 
         border-bottom: 1px solid darken($bg-section, 30%);
+        background-color: $bg-white;
 
         h2 {
           @apply text-xl;
