--- a/styles.scss
+++ b/styles.scss
@@ -63,7 +63,7 @@ body {
       @screen md {
         @apply mt-20 w-1/2 mr-10 ml-5;
       }
-      
+
       h1 {
         @apply text-5xl mb-10 text-left leading-tight ;
 
@@ -96,16 +96,22 @@ body {
 
     font-family: 'Fira Code', monospace;
 
-    ul {
-      @apply flex flex-row;
+    @screen md {
+      @apply py-5 px-10;
+    }
 
-      li {
-        button {
-          @apply p-2 text-gray-300 font-bold ml-4;
+    .logotype {
+      @apply tracking-tighter border-4 border-white text-white font-black cursor-pointer;
 
-          &:hover {
-            @apply bg-red-600 rounded shadow-md;
-          }
+      span {
+        @apply px-1;
+
+        &:first-child {
+          @apply bg-white text-black;
+        }
+
+        &:last-child {
+          @apply pr-2;
         }
       }
     }
@@ -221,11 +227,15 @@ body {
       }
 
       aside {
-        @apply absolute origin-top-left transform rotate-90;
+        @apply absolute origin-top-left transform -rotate-90;
         @apply text-sm font-mono text-gray-600;
 
-        top: 32px;
-        left: 15px;
+        top: 17rem;
+        left: -4px;
+
+        @screen md {
+          top: 14rem;
+        }
       }
     }
 
@@ -250,15 +260,13 @@ body {
 
         h3 {
           @apply italic text-gray-800 text-xl text-justify;
-
-          hyphens: auto;
         }
       }
 
       p {
         @apply text-justify;
 
-        hyphens: auto;
+        hyphens: manual;
         text-indent: 2rem;
       }
     }
